--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -11,3 +11,7 @@
     <li><a href="/genres/<%=genre.slug%>"><%=genre.name%></a></li>
   <%end%>
 </ul>
+
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
