--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -22,7 +22,7 @@
   <br></br>
 
   <%@genres.each do |genre|%>
-    <input type="checkbox" name="song[genre_ids][]" value="<%=genre.id%>" id="<%=genre.id%>"><%=genre.name%></input>
+    <input type="checkbox" name="song[genre_ids][]" value="<%=genre.id%>" id="<%=genre.name%>"><%=genre.name%></input>
   <%end%>
 
   <label>and/or, create a new artist:</label>
