automatically backed up by learn

--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -13,7 +13,7 @@
 
   <br></br>
 
-  <input type="text" id="Artist Name" name="song[artist_name]">
+  <input type="text" id="Artist Name" name="artist[artist_name]">
 
   <br></br>
 
